sam/C-Language-Parser-master/y.output
Grammar

    0 $accept: program_unit $end

    1 program_unit: HEADER program_unit
    2             | DEFINE primary_exp program_unit
    3             | translation_unit

    4 translation_unit: external_decl
    5                 | translation_unit external_decl

    6 external_decl: function_definition
    7              | decl

    8 function_definition: decl_specs declarator decl_list compound_stat
    9                    | declarator decl_list compound_stat
   10                    | decl_specs declarator compound_stat
   11                    | declarator compound_stat

   12 decl: decl_specs init_declarator_list ';'
   13     | decl_specs ';'

   14 decl_list: decl
   15          | decl_list decl

   16 decl_specs: storage_class_spec decl_specs
   17           | storage_class_spec
   18           | type_spec decl_specs
   19           | type_spec
   20           | type_qualifier decl_specs
   21           | type_qualifier

   22 storage_class_spec: storage_const

   23 type_spec: type_const
   24          | struct_or_union_spec
   25          | enum_spec
   26          | typedef_name

   27 type_qualifier: qual_const

   28 struct_or_union_spec: struct_or_union id '{' struct_decl_list '}'
   29                     | struct_or_union '{' struct_decl_list '}'
   30                     | struct_or_union id

   31 struct_or_union: struct_const

   32 struct_decl_list: struct_decl
   33                 | struct_decl_list struct_decl

   34 init_declarator_list: init_declarator
   35                     | init_declarator_list ',' init_declarator

   36 init_declarator: declarator
   37                | declarator '=' initializer

   38 struct_decl: spec_qualifier_list struct_declarator_list ';'

   39 spec_qualifier_list: type_spec spec_qualifier_list
   40                    | type_spec
   41                    | type_qualifier spec_qualifier_list
   42                    | type_qualifier

   43 struct_declarator_list: struct_declarator
   44                       | struct_declarator_list ',' struct_declarator

   45 struct_declarator: declarator
   46                  | declarator ':' const_exp
   47                  | ':' const_exp

   48 enum_spec: enum_const id '{' enumerator_list '}'
   49          | enum_const '{' enumerator_list '}'
   50          | enum_const id

   51 enumerator_list: enumerator
   52                | enumerator_list ',' enumerator

   53 enumerator: id
   54           | id '=' const_exp

   55 declarator: pointer direct_declarator
   56           | direct_declarator

   57 direct_declarator: id
   58                  | '(' declarator ')'
   59                  | direct_declarator '[' const_exp ']'
   60                  | direct_declarator '[' ']'
   61                  | direct_declarator '(' param_type_list ')'
   62                  | direct_declarator '(' id_list ')'
   63                  | direct_declarator '(' ')'

   64 pointer: '*' type_qualifier_list
   65        | '*'
   66        | '*' type_qualifier_list pointer
   67        | '*' pointer

   68 type_qualifier_list: type_qualifier
   69                    | type_qualifier_list type_qualifier

   70 param_type_list: param_list
   71                | param_list ',' param_const

   72 param_list: param_decl
   73           | param_list ',' param_decl

   74 param_decl: decl_specs declarator
   75           | decl_specs abstract_declarator
   76           | decl_specs

   77 id_list: id
   78        | id_list ',' id

   79 initializer: assignment_exp
   80            | '{' initializer_list '}'
   81            | '{' initializer_list ',' '}'

   82 initializer_list: initializer
   83                 | initializer_list ',' initializer

   84 type_name: spec_qualifier_list abstract_declarator
   85          | spec_qualifier_list

   86 abstract_declarator: pointer
   87                    | pointer direct_abstract_declarator
   88                    | direct_abstract_declarator

   89 direct_abstract_declarator: '(' abstract_declarator ')'
   90                           | direct_abstract_declarator '[' const_exp ']'
   91                           | '[' const_exp ']'
   92                           | direct_abstract_declarator '[' ']'
   93                           | '[' ']'
   94                           | direct_abstract_declarator '(' param_type_list ')'
   95                           | '(' param_type_list ')'
   96                           | direct_abstract_declarator '(' ')'
   97                           | '(' ')'

   98 typedef_name: 't'

   99 stat: labeled_stat
  100     | exp_stat
  101     | compound_stat
  102     | selection_stat
  103     | iteration_stat
  104     | jump_stat

  105 labeled_stat: id ':' stat
  106             | CASE const_exp ':' stat
  107             | DEFAULT ':' stat

  108 exp_stat: exp ';'
  109         | ';'

  110 compound_stat: '{' decl_list stat_list '}'
  111              | '{' stat_list '}'
  112              | '{' decl_list '}'
  113              | '{' '}'

  114 stat_list: stat
  115          | stat_list stat

  116 selection_stat: IF '(' exp ')' stat
  117               | IF '(' exp ')' stat ELSE stat
  118               | SWITCH '(' exp ')' stat

  119 iteration_stat: WHILE '(' exp ')' stat
  120               | DO stat WHILE '(' exp ')' ';'
  121               | FOR '(' exp ';' exp ';' exp ')' stat
  122               | FOR '(' exp ';' exp ';' ')' stat
  123               | FOR '(' exp ';' ';' exp ')' stat
  124               | FOR '(' exp ';' ';' ')' stat
  125               | FOR '(' ';' exp ';' exp ')' stat
  126               | FOR '(' ';' exp ';' ')' stat
  127               | FOR '(' ';' ';' exp ')' stat
  128               | FOR '(' ';' ';' ')' stat

  129 jump_stat: GOTO id ';'
  130          | CONTINUE ';'
  131          | BREAK ';'
  132          | RETURN exp ';'
  133          | RETURN ';'

  134 exp: assignment_exp
  135    | exp ',' assignment_exp

  136 assignment_exp: conditional_exp
  137               | unary_exp assignment_operator assignment_exp

  138 assignment_operator: PUNC
  139                    | '='

  140 conditional_exp: logical_or_exp
  141                | logical_or_exp '?' exp ':' conditional_exp

  142 const_exp: conditional_exp

  143 logical_or_exp: logical_and_exp
  144               | logical_or_exp or_const logical_and_exp

  145 logical_and_exp: inclusive_or_exp
  146                | logical_and_exp and_const inclusive_or_exp

  147 inclusive_or_exp: exclusive_or_exp
  148                 | inclusive_or_exp '|' exclusive_or_exp

  149 exclusive_or_exp: and_exp
  150                 | exclusive_or_exp '^' and_exp

  151 and_exp: equality_exp
  152        | and_exp '&' equality_exp

  153 equality_exp: relational_exp
  154             | equality_exp eq_const relational_exp

  155 relational_exp: shift_expression
  156               | relational_exp '<' shift_expression
  157               | relational_exp '>' shift_expression
  158               | relational_exp rel_const shift_expression

  159 shift_expression: additive_exp
  160                 | shift_expression shift_const additive_exp

  161 additive_exp: mult_exp
  162             | additive_exp '+' mult_exp
  163             | additive_exp '-' mult_exp

  164 mult_exp: cast_exp
  165         | mult_exp '*' cast_exp
  166         | mult_exp '/' cast_exp
  167         | mult_exp '%' cast_exp

  168 cast_exp: unary_exp
  169         | '(' type_name ')' cast_exp

  170 unary_exp: postfix_exp
  171          | inc_const unary_exp
  172          | unary_operator cast_exp
  173          | SIZEOF unary_exp
  174          | SIZEOF '(' type_name ')'

  175 unary_operator: '&'
  176               | '*'
  177               | '+'
  178               | '-'
  179               | '~'
  180               | '!'

  181 postfix_exp: primary_exp
  182            | postfix_exp '[' exp ']'
  183            | postfix_exp '(' argument_exp_list ')'
  184            | postfix_exp '(' ')'
  185            | postfix_exp '.' id
  186            | postfix_exp point_const id
  187            | postfix_exp inc_const

  188 primary_exp: id
  189            | consts
  190            | string
  191            | '(' exp ')'

  192 argument_exp_list: assignment_exp
  193                  | argument_exp_list ',' assignment_exp

  194 consts: int_const
  195       | char_const
  196       | float_const
  197       | enumeration_const


Terminals, with rules where they appear

$end (0) 0
'!' (33) 180
'%' (37) 167
'&' (38) 152 175
'(' (40) 58 61 62 63 89 94 95 96 97 116 117 118 119 120 121 122 123
    124 125 126 127 128 169 174 183 184 191
')' (41) 58 61 62 63 89 94 95 96 97 116 117 118 119 120 121 122 123
    124 125 126 127 128 169 174 183 184 191
'*' (42) 64 65 66 67 165 176
'+' (43) 162 177
',' (44) 35 44 52 71 73 78 81 83 135 193
'-' (45) 163 178
'.' (46) 185
'/' (47) 166
':' (58) 46 47 105 106 107 141
';' (59) 12 13 38 108 109 120 121 122 123 124 125 126 127 128 129 130
    131 132 133
'<' (60) 156
'=' (61) 37 54 139
'>' (62) 157
'?' (63) 141
'[' (91) 59 60 90 91 92 93 182
']' (93) 59 60 90 91 92 93 182
'^' (94) 150
't' (116) 98
'{' (123) 28 29 48 49 80 81 110 111 112 113
'|' (124) 148
'}' (125) 28 29 48 49 80 81 110 111 112 113
'~' (126) 179
error (256)
int_const (258) 194
char_const (259) 195
float_const (260) 196
id (261) 28 30 48 50 53 54 57 77 78 105 129 185 186 188
string (262) 190
enumeration_const (263) 197
storage_const (264) 22
type_const (265) 23
qual_const (266) 27
struct_const (267) 31
enum_const (268) 48 49 50
DEFINE (269) 2
IF (270) 116 117
FOR (271) 121 122 123 124 125 126 127 128
DO (272) 120
WHILE (273) 119 120
BREAK (274) 131
SWITCH (275) 118
CONTINUE (276) 130
RETURN (277) 132 133
CASE (278) 106
DEFAULT (279) 107
GOTO (280) 129
SIZEOF (281) 173 174
PUNC (282) 138
or_const (283) 144
and_const (284) 146
eq_const (285) 154
shift_const (286) 160
rel_const (287) 158
inc_const (288) 171 187
point_const (289) 186
param_const (290) 71
ELSE (291) 117
HEADER (292) 1
"then" (293)


Nonterminals, with rules where they appear

$accept (64)
    on left: 0
program_unit (65)
    on left: 1 2 3, on right: 0 1 2
translation_unit (66)
    on left: 4 5, on right: 3 5
external_decl (67)
    on left: 6 7, on right: 4 5
function_definition (68)
    on left: 8 9 10 11, on right: 6
decl (69)
    on left: 12 13, on right: 7 14 15
decl_list (70)
    on left: 14 15, on right: 8 9 15 110 112
decl_specs (71)
    on left: 16 17 18 19 20 21, on right: 8 10 12 13 16 18 20 74 75
    76
storage_class_spec (72)
    on left: 22, on right: 16 17
type_spec (73)
    on left: 23 24 25 26, on right: 18 19 39 40
type_qualifier (74)
    on left: 27, on right: 20 21 41 42 68 69
struct_or_union_spec (75)
    on left: 28 29 30, on right: 24
struct_or_union (76)
    on left: 31, on right: 28 29 30
struct_decl_list (77)
    on left: 32 33, on right: 28 29 33
init_declarator_list (78)
    on left: 34 35, on right: 12 35
init_declarator (79)
    on left: 36 37, on right: 34 35
struct_decl (80)
    on left: 38, on right: 32 33
spec_qualifier_list (81)
    on left: 39 40 41 42, on right: 38 39 41 84 85
struct_declarator_list (82)
    on left: 43 44, on right: 38 44
struct_declarator (83)
    on left: 45 46 47, on right: 43 44
enum_spec (84)
    on left: 48 49 50, on right: 25
enumerator_list (85)
    on left: 51 52, on right: 48 49 52
enumerator (86)
    on left: 53 54, on right: 51 52
declarator (87)
    on left: 55 56, on right: 8 9 10 11 36 37 45 46 58 74
direct_declarator (88)
    on left: 57 58 59 60 61 62 63, on right: 55 56 59 60 61 62 63
pointer (89)
    on left: 64 65 66 67, on right: 55 66 67 86 87
type_qualifier_list (90)
    on left: 68 69, on right: 64 66 69
param_type_list (91)
    on left: 70 71, on right: 61 94 95
param_list (92)
    on left: 72 73, on right: 70 71 73
param_decl (93)
    on left: 74 75 76, on right: 72 73
id_list (94)
    on left: 77 78, on right: 62 78
initializer (95)
    on left: 79 80 81, on right: 37 82 83
initializer_list (96)
    on left: 82 83, on right: 80 81 83
type_name (97)
    on left: 84 85, on right: 169 174
abstract_declarator (98)
    on left: 86 87 88, on right: 75 84 89
direct_abstract_declarator (99)
    on left: 89 90 91 92 93 94 95 96 97, on right: 87 88 90 92 94 96
typedef_name (100)
    on left: 98, on right: 26
stat (101)
    on left: 99 100 101 102 103 104, on right: 105 106 107 114 115
    116 117 118 119 120 121 122 123 124 125 126 127 128
labeled_stat (102)
    on left: 105 106 107, on right: 99
exp_stat (103)
    on left: 108 109, on right: 100
compound_stat (104)
    on left: 110 111 112 113, on right: 8 9 10 11 101
stat_list (105)
    on left: 114 115, on right: 110 111 115
selection_stat (106)
    on left: 116 117 118, on right: 102
iteration_stat (107)
    on left: 119 120 121 122 123 124 125 126 127 128, on right: 103
jump_stat (108)
    on left: 129 130 131 132 133, on right: 104
exp (109)
    on left: 134 135, on right: 108 116 117 118 119 120 121 122 123
    124 125 126 127 132 135 141 182 191
assignment_exp (110)
    on left: 136 137, on right: 79 134 135 137 192 193
assignment_operator (111)
    on left: 138 139, on right: 137
conditional_exp (112)
    on left: 140 141, on right: 136 141 142
const_exp (113)
    on left: 142, on right: 46 47 54 59 90 91 106
logical_or_exp (114)
    on left: 143 144, on right: 140 141 144
logical_and_exp (115)
    on left: 145 146, on right: 143 144 146
inclusive_or_exp (116)
    on left: 147 148, on right: 145 146 148
exclusive_or_exp (117)
    on left: 149 150, on right: 147 148 150
and_exp (118)
    on left: 151 152, on right: 149 150 152
equality_exp (119)
    on left: 153 154, on right: 151 152 154
relational_exp (120)
    on left: 155 156 157 158, on right: 153 154 156 157 158
shift_expression (121)
    on left: 159 160, on right: 155 156 157 158 160
additive_exp (122)
    on left: 161 162 163, on right: 159 160 162 163
mult_exp (123)
    on left: 164 165 166 167, on right: 161 162 163 165 166 167
cast_exp (124)
    on left: 168 169, on right: 164 165 166 167 169 172
unary_exp (125)
    on left: 170 171 172 173 174, on right: 137 168 171 173
unary_operator (126)
    on left: 175 176 177 178 179 180, on right: 172
postfix_exp (127)
    on left: 181 182 183 184 185 186 187, on right: 170 182 183 184
    185 186 187
primary_exp (128)
    on left: 188 189 190 191, on right: 2 181
argument_exp_list (129)
    on left: 192 193, on right: 183 193
consts (130)
    on left: 194 195 196 197, on right: 189


State 0

    0 $accept: . program_unit $end

    id             shift, and go to state 1
    storage_const  shift, and go to state 2
    type_const     shift, and go to state 3
    qual_const     shift, and go to state 4
    struct_const   shift, and go to state 5
    enum_const     shift, and go to state 6
    DEFINE         shift, and go to state 7
    HEADER         shift, and go to state 8
    '*'            shift, and go to state 9
    '('            shift, and go to state 10
    't'            shift, and go to state 11

    program_unit          go to state 12
    translation_unit      go to state 13
    external_decl         go to state 14
    function_definition   go to state 15
    decl                  go to state 16
    decl_specs            go to state 17
    storage_class_spec    go to state 18
    type_spec             go to state 19
    type_qualifier        go to state 20
    struct_or_union_spec  go to state 21
    struct_or_union       go to state 22
    enum_spec             go to state 23
    declarator            go to state 24
    direct_declarator     go to state 25
    pointer               go to state 26
    typedef_name          go to state 27


State 1

   57 direct_declarator: id .

    $default  reduce using rule 57 (direct_declarator)


State 2

   22 storage_class_spec: storage_const .

    $default  reduce using rule 22 (storage_class_spec)


State 3

   23 type_spec: type_const .

    $default  reduce using rule 23 (type_spec)


State 4

   27 type_qualifier: qual_const .

    $default  reduce using rule 27 (type_qualifier)


State 5

   31 struct_or_union: struct_const .

    $default  reduce using rule 31 (struct_or_union)


State 6

   48 enum_spec: enum_const . id '{' enumerator_list '}'
   49          | enum_const . '{' enumerator_list '}'
   50          | enum_const . id

    id   shift, and go to state 28
    '{'  shift, and go to state 29


State 7

    2 program_unit: DEFINE . primary_exp program_unit

    int_const          shift, and go to state 30
    char_const         shift, and go to state 31
    float_const        shift, and go to state 32
    id                 shift, and go to state 33
    string             shift, and go to state 34
    enumeration_const  shift, and go to state 35
    '('                shift, and go to state 36

    primary_exp  go to state 37
    consts       go to state 38


State 8

    1 program_unit: HEADER . program_unit

    id             shift, and go to state 1
    storage_const  shift, and go to state 2
    type_const     shift, and go to state 3
    qual_const     shift, and go to state 4
    struct_const   shift, and go to state 5
    enum_const     shift, and go to state 6
    DEFINE         shift, and go to state 7
    HEADER         shift, and go to state 8
    '*'            shift, and go to state 9
    '('            shift, and go to state 10
    't'            shift, and go to state 11

    program_unit          go to state 39
    translation_unit      go to state 13
    external_decl         go to state 14
    function_definition   go to state 15
    decl                  go to state 16
    decl_specs            go to state 17
    storage_class_spec    go to state 18
    type_spec             go to state 19
    type_qualifier        go to state 20
    struct_or_union_spec  go to state 21
    struct_or_union       go to state 22
    enum_spec             go to state 23
    declarator            go to state 24
    direct_declarator     go to state 25
    pointer               go to state 26
    typedef_name          go to state 27


State 9

   64 pointer: '*' . type_qualifier_list
   65        | '*' .
   66        | '*' . type_qualifier_list pointer
   67        | '*' . pointer

    qual_const  shift, and go to state 4
    '*'         shift, and go to state 9

    $default  reduce using rule 65 (pointer)

    type_qualifier       go to state 40
    pointer              go to state 41
    type_qualifier_list  go to state 42


State 10

   58 direct_declarator: '(' . declarator ')'

    id   shift, and go to state 1
    '*'  shift, and go to state 9
    '('  shift, and go to state 10

    declarator         go to state 43
    direct_declarator  go to state 25
    pointer            go to state 26


State 11

   98 typedef_name: 't' .

    $default  reduce using rule 98 (typedef_name)


State 12

    0 $accept: program_unit . $end

    $end  shift, and go to state 44


State 13

    3 program_unit: translation_unit .
    5 translation_unit: translation_unit . external_decl

    id             shift, and go to state 1
    storage_const  shift, and go to state 2
    type_const     shift, and go to state 3
    qual_const     shift, and go to state 4
    struct_const   shift, and go to state 5
    enum_const     shift, and go to state 6
    '*'            shift, and go to state 9
    '('            shift, and go to state 10
    't'            shift, and go to state 11

    $default  reduce using rule 3 (program_unit)

    external_decl         go to state 45
    function_definition   go to state 15
    decl                  go to state 16
    decl_specs            go to state 17
    storage_class_spec    go to state 18
    type_spec             go to state 19
    type_qualifier        go to state 20
    struct_or_union_spec  go to state 21
    struct_or_union       go to state 22
    enum_spec             go to state 23
    declarator            go to state 24
    direct_declarator     go to state 25
    pointer               go to state 26
    typedef_name          go to state 27


State 14

    4 translation_unit: external_decl .

    $default  reduce using rule 4 (translation_unit)


State 15

    6 external_decl: function_definition .

    $default  reduce using rule 6 (external_decl)


State 16

    7 external_decl: decl .

    $default  reduce using rule 7 (external_decl)


State 17

    8 function_definition: decl_specs . declarator decl_list compound_stat
   10                    | decl_specs . declarator compound_stat
   12 decl: decl_specs . init_declarator_list ';'
   13     | decl_specs . ';'

    id   shift, and go to state 1
    '*'  shift, and go to state 9
    ';'  shift, and go to state 46
    '('  shift, and go to state 10

    init_declarator_list  go to state 47
    init_declarator       go to state 48
    declarator            go to state 49
    direct_declarator     go to state 25
    pointer               go to state 26


State 18

   16 decl_specs: storage_class_spec . decl_specs
   17           | storage_class_spec .

    storage_const  shift, and go to state 2
    type_const     shift, and go to state 3
    qual_const     shift, and go to state 4
    struct_const   shift, and go to state 5
    enum_const     shift, and go to state 6
    't'            shift, and go to state 11

    $default  reduce using rule 17 (decl_specs)

    decl_specs            go to state 50
    storage_class_spec    go to state 18
    type_spec             go to state 19
    type_qualifier        go to state 20
    struct_or_union_spec  go to state 21
    struct_or_union       go to state 22
    enum_spec             go to state 23
    typedef_name          go to state 27


State 19

   18 decl_specs: type_spec . decl_specs
   19           | type_spec .

    storage_const  shift, and go to state 2
    type_const     shift, and go to state 3
    qual_const     shift, and go to state 4
    struct_const   shift, and go to state 5
    enum_const     shift, and go to state 6
    't'            shift, and go to state 11

    $default  reduce using rule 19 (decl_specs)

    decl_specs            go to state 51
    storage_class_spec    go to state 18
    type_spec             go to state 19
    type_qualifier        go to state 20
    struct_or_union_spec  go to state 21
    struct_or_union       go to state 22
    enum_spec             go to state 23
    typedef_name          go to state 27


State 20

   20 decl_specs: type_qualifier . decl_specs
   21           | type_qualifier .

    storage_const  shift, and go to state 2
    type_const     shift, and go to state 3
    qual_const     shift, and go to state 4
    struct_const   shift, and go to state 5
    enum_const     shift, and go to state 6
    't'            shift, and go to state 11

    $default  reduce using rule 21 (decl_specs)

    decl_specs            go to state 52
    storage_class_spec    go to state 18
    type_spec             go to state 19
    type_qualifier        go to state 20
    struct_or_union_spec  go to state 21
    struct_or_union       go to state 22
    enum_spec             go to state 23
    typedef_name          go to state 27


State 21

   24 type_spec: struct_or_union_spec .

    $default  reduce using rule 24 (type_spec)


State 22

   28 struct_or_union_spec: struct_or_union . id '{' struct_decl_list '}'
   29                     | struct_or_union . '{' struct_decl_list '}'
   30                     | struct_or_union . id

    id   shift, and go to state 53
    '{'  shift, and go to state 54


State 23

   25 type_spec: enum_spec .

    $default  reduce using rule 25 (type_spec)


State 24

    9 function_definition: declarator . decl_list compound_stat
   11                    | declarator . compound_stat

    storage_const  shift, and go to state 2
    type_const     shift, and go to state 3
    qual_const     shift, and go to state 4
    struct_const   shift, and go to state 5
    enum_const     shift, and go to state 6
    '{'            shift, and go to state 55
    't'            shift, and go to state 11

    decl                  go to state 56
    decl_list             go to state 57
    decl_specs            go to state 58
    storage_class_spec    go to state 18
    type_spec             go to state 19
    type_qualifier        go to state 20
    struct_or_union_spec  go to state 21
    struct_or_union       go to state 22
    enum_spec             go to state 23
    typedef_name          go to state 27
    compound_stat         go to state 59


State 25

   56 declarator: direct_declarator .
   59 direct_declarator: direct_declarator . '[' const_exp ']'
   60                  | direct_declarator . '[' ']'
   61                  | direct_declarator . '(' param_type_list ')'
   62                  | direct_declarator . '(' id_list ')'
   63                  | direct_declarator . '(' ')'

    '('  shift, and go to state 60
    '['  shift, and go to state 61

    $default  reduce using rule 56 (declarator)


State 26

   55 declarator: pointer . direct_declarator

    id   shift, and go to state 1
    '('  shift, and go to state 10

    direct_declarator  go to state 62


State 27

   26 type_spec: typedef_name .

    $default  reduce using rule 26 (type_spec)


State 28

   48 enum_spec: enum_const id . '{' enumerator_list '}'
   50          | enum_const id .

    '{'  shift, and go to state 63

    $default  reduce using rule 50 (enum_spec)


State 29

   49 enum_spec: enum_const '{' . enumerator_list '}'

    id  shift, and go to state 64

    enumerator_list  go to state 65
    enumerator       go to state 66


State 30

  194 consts: int_const .

    $default  reduce using rule 194 (consts)


State 31

  195 consts: char_const .

    $default  reduce using rule 195 (consts)


State 32

  196 consts: float_const .

    $default  reduce using rule 196 (consts)


State 33

  188 primary_exp: id .

    $default  reduce using rule 188 (primary_exp)


State 34

  190 primary_exp: string .

    $default  reduce using rule 190 (primary_exp)


State 35

  197 consts: enumeration_const .

    $default  reduce using rule 197 (consts)


State 36

  191 primary_exp: '(' . exp ')'

    int_const          shift, and go to state 30
    char_const         shift, and go to state 31
    float_const        shift, and go to state 32
    id                 shift, and go to state 33
    string             shift, and go to state 34
    enumeration_const  shift, and go to state 35
    SIZEOF             shift, and go to state 67
    inc_const          shift, and go to state 68
    '+'                shift, and go to state 69
    '-'                shift, and go to state 70
    '*'                shift, and go to state 71
    '('                shift, and go to state 72
    '&'                shift, and go to state 73
    '~'                shift, and go to state 74
    '!'                shift, and go to state 75

    exp               go to state 76
    assignment_exp    go to state 77
    conditional_exp   go to state 78
    logical_or_exp    go to state 79
    logical_and_exp   go to state 80
    inclusive_or_exp  go to state 81
    exclusive_or_exp  go to state 82
    and_exp           go to state 83
    equality_exp      go to state 84
    relational_exp    go to state 85
    shift_expression  go to state 86
    additive_exp      go to state 87
    mult_exp          go to state 88
    cast_exp          go to state 89
    unary_exp         go to state 90
    unary_operator    go to state 91
    postfix_exp       go to state 92
    primary_exp       go to state 93
    consts            go to state 38


State 37

    2 program_unit: DEFINE primary_exp . program_unit

    id             shift, and go to state 1
    storage_const  shift, and go to state 2
    type_const     shift, and go to state 3
    qual_const     shift, and go to state 4
    struct_const   shift, and go to state 5
    enum_const     shift, and go to state 6
    DEFINE         shift, and go to state 7
    HEADER         shift, and go to state 8
    '*'            shift, and go to state 9
    '('            shift, and go to state 10
    't'            shift, and go to state 11

    program_unit          go to state 94
    translation_unit      go to state 13
    external_decl         go to state 14
    function_definition   go to state 15
    decl                  go to state 16
    decl_specs            go to state 17
    storage_class_spec    go to state 18
    type_spec             go to state 19
    type_qualifier        go to state 20
    struct_or_union_spec  go to state 21
    struct_or_union       go to state 22
    enum_spec             go to state 23
    declarator            go to state 24
    direct_declarator     go to state 25
    pointer               go to state 26
    typedef_name          go to state 27


State 38

  189 primary_exp: consts .

    $default  reduce using rule 189 (primary_exp)


State 39

    1 program_unit: HEADER program_unit .

    $default  reduce using rule 1 (program_unit)


State 40

   68 type_qualifier_list: type_qualifier .

    $default  reduce using rule 68 (type_qualifier_list)


State 41

   67 pointer: '*' pointer .

    $default  reduce using rule 67 (pointer)


State 42

   64 pointer: '*' type_qualifier_list .
   66        | '*' type_qualifier_list . pointer
   69 type_qualifier_list: type_qualifier_list . type_qualifier

    qual_const  shift, and go to state 4
    '*'         shift, and go to state 9

    $default  reduce using rule 64 (pointer)

    type_qualifier  go to state 95
    pointer         go to state 96


State 43

   58 direct_declarator: '(' declarator . ')'

    ')'  shift, and go to state 97


State 44

    0 $accept: program_unit $end .

    $default  accept


State 45

    5 translation_unit: translation_unit external_decl .

    $default  reduce using rule 5 (translation_unit)


State 46

   13 decl: decl_specs ';' .

    $default  reduce using rule 13 (decl)


State 47

   12 decl: decl_specs init_declarator_list . ';'
   35 init_declarator_list: init_declarator_list . ',' init_declarator

    ';'  shift, and go to state 98
    ','  shift, and go to state 99


State 48

   34 init_declarator_list: init_declarator .

    $default  reduce using rule 34 (init_declarator_list)


State 49

    8 function_definition: decl_specs declarator . decl_list compound_stat
   10                    | decl_specs declarator . compound_stat
   36 init_declarator: declarator .
   37                | declarator . '=' initializer

    storage_const  shift, and go to state 2
    type_const     shift, and go to state 3
    qual_const     shift, and go to state 4
    struct_const   shift, and go to state 5
    enum_const     shift, and go to state 6
    '{'            shift, and go to state 55
    '='            shift, and go to state 100
    't'            shift, and go to state 11

    $default  reduce using rule 36 (init_declarator)

    decl                  go to state 56
    decl_list             go to state 101
    decl_specs            go to state 58
    storage_class_spec    go to state 18
    type_spec             go to state 19
    type_qualifier        go to state 20
    struct_or_union_spec  go to state 21
    struct_or_union       go to state 22
    enum_spec             go to state 23
    typedef_name          go to state 27
    compound_stat         go to state 102


State 50

   16 decl_specs: storage_class_spec decl_specs .

    $default  reduce using rule 16 (decl_specs)


State 51

   18 decl_specs: type_spec decl_specs .

    $default  reduce using rule 18 (decl_specs)


State 52

   20 decl_specs: type_qualifier decl_specs .

    $default  reduce using rule 20 (decl_specs)


State 53

   28 struct_or_union_spec: struct_or_union id . '{' struct_decl_list '}'
   30                     | struct_or_union id .

    '{'  shift, and go to state 103

    $default  reduce using rule 30 (struct_or_union_spec)


State 54

   29 struct_or_union_spec: struct_or_union '{' . struct_decl_list '}'

    type_const    shift, and go to state 3
    qual_const    shift, and go to state 4
    struct_const  shift, and go to state 5
    enum_const    shift, and go to state 6
    't'           shift, and go to state 11

    type_spec             go to state 104
    type_qualifier        go to state 105
    struct_or_union_spec  go to state 21
    struct_or_union       go to state 22
    struct_decl_list      go to state 106
    struct_decl           go to state 107
    spec_qualifier_list   go to state 108
    enum_spec             go to state 23
    typedef_name          go to state 27


State 55

  110 compound_stat: '{' . decl_list stat_list '}'
  111              | '{' . stat_list '}'
  112              | '{' . decl_list '}'
  113              | '{' . '}'

    int_const          shift, and go to state 30
    char_const         shift, and go to state 31
    float_const        shift, and go to state 32
    id                 shift, and go to state 109
    string             shift, and go to state 34
    enumeration_const  shift, and go to state 35
    storage_const      shift, and go to state 2
    type_const         shift, and go to state 3
    qual_const         shift, and go to state 4
    struct_const       shift, and go to state 5
    enum_const         shift, and go to state 6
    IF                 shift, and go to state 110
    FOR                shift, and go to state 111
    DO                 shift, and go to state 112
    WHILE              shift, and go to state 113
    BREAK              shift, and go to state 114
    SWITCH             shift, and go to state 115
    CONTINUE           shift, and go to state 116
    RETURN             shift, and go to state 117
    CASE               shift, and go to state 118
    DEFAULT            shift, and go to state 119
    GOTO               shift, and go to state 120
    SIZEOF             shift, and go to state 67
    inc_const          shift, and go to state 68
    '+'                shift, and go to state 69
    '-'                shift, and go to state 70
    '*'                shift, and go to state 71
    ';'                shift, and go to state 121
    '{'                shift, and go to state 55
    '}'                shift, and go to state 122
    '('                shift, and go to state 72
    't'                shift, and go to state 11
    '&'                shift, and go to state 73
    '~'                shift, and go to state 74
    '!'                shift, and go to state 75

    decl                  go to state 56
    decl_list             go to state 123
    decl_specs            go to state 58
    storage_class_spec    go to state 18
    type_spec             go to state 19
    type_qualifier        go to state 20
    struct_or_union_spec  go to state 21
    struct_or_union       go to state 22
    enum_spec             go to state 23
    typedef_name          go to state 27
    stat                  go to state 124
    labeled_stat          go to state 125
    exp_stat              go to state 126
    compound_stat         go to state 127
    stat_list             go to state 128
    selection_stat        go to state 129
    iteration_stat        go to state 130
    jump_stat             go to state 131
    exp                   go to state 132
    assignment_exp        go to state 77
    conditional_exp       go to state 78
    logical_or_exp        go to state 79
    logical_and_exp       go to state 80
    inclusive_or_exp      go to state 81
    exclusive_or_exp      go to state 82
    and_exp               go to state 83
    equality_exp          go to state 84
    relational_exp        go to state 85
    shift_expression      go to state 86
    additive_exp          go to state 87
    mult_exp              go to state 88
    cast_exp              go to state 89
    unary_exp             go to state 90
    unary_operator        go to state 91
    postfix_exp           go to state 92
    primary_exp           go to state 93
    consts                go to state 38


State 56

   14 decl_list: decl .

    $default  reduce using rule 14 (decl_list)


State 57

    9 function_definition: declarator decl_list . compound_stat
   15 decl_list: decl_list . decl

    storage_const  shift, and go to state 2
    type_const     shift, and go to state 3
    qual_const     shift, and go to state 4
    struct_const   shift, and go to state 5
    enum_const     shift, and go to state 6
    '{'            shift, and go to state 55
    't'            shift, and go to state 11

    decl                  go to state 133
    decl_specs            go to state 58
    storage_class_spec    go to state 18
    type_spec             go to state 19
    type_qualifier        go to state 20
    struct_or_union_spec  go to state 21
    struct_or_union       go to state 22
    enum_spec             go to state 23
    typedef_name          go to state 27
    compound_stat         go to state 134


State 58

   12 decl: decl_specs . init_declarator_list ';'
   13     | decl_specs . ';'

    id   shift, and go to state 1
    '*'  shift, and go to state 9
    ';'  shift, and go to state 46
    '('  shift, and go to state 10

    init_declarator_list  go to state 47
    init_declarator       go to state 48
    declarator            go to state 135
    direct_declarator     go to state 25
    pointer               go to state 26


State 59

   11 function_definition: declarator compound_stat .

    $default  reduce using rule 11 (function_definition)


State 60

   61 direct_declarator: direct_declarator '(' . param_type_list ')'
   62                  | direct_declarator '(' . id_list ')'
   63                  | direct_declarator '(' . ')'

    id             shift, and go to state 136
    storage_const  shift, and go to state 2
    type_const     shift, and go to state 3
    qual_const     shift, and go to state 4
    struct_const   shift, and go to state 5
    enum_const     shift, and go to state 6
    ')'            shift, and go to state 137
    't'            shift, and go to state 11

    decl_specs            go to state 138
    storage_class_spec    go to state 18
    type_spec             go to state 19
    type_qualifier        go to state 20
    struct_or_union_spec  go to state 21
    struct_or_union       go to state 22
    enum_spec             go to state 23
    param_type_list       go to state 139
    param_list            go to state 140
    param_decl            go to state 141
    id_list               go to state 142
    typedef_name          go to state 27


State 61
